objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Type_of_Software_Needed_For_Appointment__c</fullName>
        <label>Type of Software Needed For Appointment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Manufacturer_Software__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Software</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order_Duration_Days_and_Hours__c</fullName>
        <formula>Status_Completed__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Duration (Days and Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type_Name__c</fullName>
        <formula>WorkType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wellnessvisit_documented__c</fullName>
        <description>Did you document the wellness visit in the RT meal book?</description>
        <label>Visit documented in the RT Meal book?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Additional_Help_Required</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>IGB__c</columns>
        <columns>Account</columns>
        <columns>ServiceTerritory</columns>
        <columns>Asset</columns>
        <columns>SAS__c</columns>
        <columns>WorkType</columns>
        <columns>LastModifiedBy</columns>
        <columns>Duration</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Work Orders Today</label>
    </listViews>
    <listViews>
        <fullName>Agent_Appointment</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <columns>ServiceTerritory</columns>
        <columns>SAS__c</columns>
        <columns>WorkType</columns>
        <columns>CreatedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>Priority</columns>
        <columns>Solution_Notes__c</columns>
        <columns>Compliance_Appointment_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agent_Appointment_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Agent Appointment</label>
    </listViews>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <columns>Service_Region__c</columns>
        <columns>WorkType</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Amusement_PM_Work_Orders_Time</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>CITY</columns>
        <columns>Site_Notes__c</columns>
        <columns>Equipment_Assets__c</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <columns>Confirmed_PM_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Preventative_Maintenance</value>
        </filters>
        <filters>
            <field>Amusement_Project__c</field>
            <operation>equals</operation>
            <value>Amusement PM</value>
        </filters>
        <label>Amusement PM Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Cannot_Complete</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <columns>Service_Region__c</columns>
        <columns>WorkType</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Cannot Complete</label>
    </listViews>
    <listViews>
        <fullName>My_Service_App_Work_Orders</fullName>
        <columns>CreatedDate</columns>
        <columns>Name</columns>
        <columns>RecordType</columns>
        <columns>Account</columns>
        <columns>Submission_Date_time__c</columns>
        <columns>Arrival_Date_time__c</columns>
        <columns>EnRoute_Date_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>WorkOrder.Colleague_Assistance,WorkOrder.Georgia_Route,WorkOrder.Installer,WorkOrder.Inventory_Check,WorkOrder.Project,WorkOrder.Software_Updates,WorkOrder.Training,WorkOrder.Vehicle_Maintenance,WorkOrder.Warehouse,WorkOrder.Wellness_Visit</value>
        </filters>
        <label>My Service App Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>Case</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <columns>Service_Region__c</columns>
        <columns>WorkType</columns>
        <columns>CreatedDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Needs_Parts</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <columns>ServiceTerritory</columns>
        <columns>SAS__c</columns>
        <columns>WorkType</columns>
        <columns>LastModifiedBy</columns>
        <columns>CreatedDate</columns>
        <columns>Priority</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Additional_Parts_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Parts on Order</label>
    </listViews>
    <listViews>
        <fullName>PM_Project_Work_Orders</fullName>
        <columns>Name</columns>
        <columns>IGB__c</columns>
        <columns>Account</columns>
        <columns>CITY</columns>
        <columns>Site_Grade__c</columns>
        <columns>Status</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <columns>ServiceTerritory</columns>
        <columns>Special_Project__c</columns>
        <columns>Special_Project_Type__c</columns>
        <columns>Concierge_Account__c</columns>
        <columns>Site_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Grade__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>9/9/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Special_Project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Special_Project_Type__c</field>
            <operation>notEqual</operation>
            <value>Amusement PM</value>
        </filters>
        <label>PM Project Work Orders</label>
    </listViews>
    <listViews>
        <fullName>PM_Work_Orders</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>CITY</columns>
        <columns>Site_Grade__c</columns>
        <columns>Site_Notes__c</columns>
        <columns>Status</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <columns>ServiceTerritory</columns>
        <columns>RecordType</columns>
        <columns>IGB__c</columns>
        <columns>Concierge_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Grade__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CreatedDate</field>
            <operation>greaterOrEqual</operation>
            <value>9/9/2019 12:00 AM</value>
        </filters>
        <label>PM Work Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Colleague_Assistance</fullName>
        <active>true</active>
        <label>Colleague Assistance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collections</fullName>
        <active>true</active>
        <label>Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>Georgia_Route</fullName>
        <active>true</active>
        <label>Georgia Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>Go_Live</fullName>
        <active>true</active>
        <label>Go-Live</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installer</fullName>
        <active>true</active>
        <label>Installer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Check</fullName>
        <active>true</active>
        <label>Inventory Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintenance</fullName>
        <active>true</active>
        <label>Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preventative_Maintenance</fullName>
        <active>true</active>
        <label>Preventative Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reconfiguration</fullName>
        <active>true</active>
        <label>Reconfiguration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Appointment</fullName>
        <active>true</active>
        <label>Service Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Updates</fullName>
        <active>true</active>
        <label>Software Updates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Upgrade</fullName>
        <active>true</active>
        <label>Software Upgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Swap</fullName>
        <active>true</active>
        <label>Swap</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Maintenance</fullName>
        <active>true</active>
        <label>Vehicle Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Warehouse</fullName>
        <active>true</active>
        <label>Warehouse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wellness_Visit</fullName>
        <active>true</active>
        <label>Wellness Visit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Arrival_Value_Cannot_Change</fullName>
        <active>true</active>
        <description>You Cannot Change the Value of the Arrival Field Once It Has Been Set.</description>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;
PriorValue(Arrival_Date_time__c) != Arrival_Date_time__c</errorConditionFormula>
        <errorDisplayField>Arrival_Date_time__c</errorDisplayField>
        <errorMessage>You Cannot Change the Value of the Arrival Field Once It Has Been Set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arrival_cannot_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;

(IsBlank(EnRoute_Date_Time__c ) ||  IsBlank(Arrival_Date_time__c )) &amp;&amp; Not(IsBlank( Submission_Date_time__c ))</errorConditionFormula>
        <errorDisplayField>Submission_Date_time__c</errorDisplayField>
        <errorMessage>Arrival and EnRoute must be selected before selecting submission end/time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Arrival_Enroute</fullName>
        <active>false</active>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFdQAO&apos; || RecordTypeId=&apos;0121I000000BZtWQAW&apos; || RecordTypeId=&apos;0121I000000BZtVQAW&apos; || RecordTypeId=&apos;0121I000000BZtUQAW&apos; ||
RecordTypeId=&apos;0121I000000BZtTQAW&apos; ||
RecordTypeId=&apos;0128C000000GqVhQAK&apos; || RecordTypeId=&apos;0121I000000BaAfQAK&apos;)&amp;&amp;
IsBlank(EnRoute_Date_Time__c) &amp;&amp; Not(Isblank(Arrival_Date_time__c ))</errorConditionFormula>
        <errorDisplayField>Submission_Date_time__c</errorDisplayField>
        <errorMessage>Cannot Have Null EnRoute Time when Arrival Time Has Been Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Arrival_b4_Enroute</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;
IsBlank(EnRoute_Date_Time__c) &amp;&amp; Not(Isblank(Arrival_Date_time__c ))</errorConditionFormula>
        <errorMessage>Cannot Have Null EnRoute Time when Arrival Time Has Been Entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnRoute_AND_ARRIVAL_Must_Be_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;

(IsBlank(EnRoute_Date_Time__c ) ||  IsBlank(Arrival_Date_time__c )) &amp;&amp; Not(IsBlank(Submission_Date_time__c))</errorConditionFormula>
        <errorDisplayField>Submission_Date_time__c</errorDisplayField>
        <errorMessage>Please Select an EnRoute time before  entering Arrival time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnRoute_Before_Record_Creation</fullName>
        <active>false</active>
        <description>EnRoute must be selected before Editing the record.</description>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;
Not(IsBlank( LastModifiedDate))&amp;&amp;  IsBlank(EnRoute_Date_Time__c)</errorConditionFormula>
        <errorDisplayField>EnRoute_Date_Time__c</errorDisplayField>
        <errorMessage>EnRoute must be selected before Editing the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnRoute_Must_Be_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;

IsBlank(EnRoute_Date_Time__c ) &amp;&amp;  Not(IsBlank(Arrival_Date_time__c ))</errorConditionFormula>
        <errorDisplayField>Arrival_Date_time__c</errorDisplayField>
        <errorMessage>Please Select an EnRoute time before  entering Arrival time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnRoute_Value_Cannot_Change</fullName>
        <active>true</active>
        <description>You Cannot Change the Value of the Enroute Field Once It Has Been Set.</description>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;
PriorValue(EnRoute_Date_Time__c) != EnRoute_Date_Time__c</errorConditionFormula>
        <errorDisplayField>EnRoute_Date_Time__c</errorDisplayField>
        <errorMessage>You Cannot Change the Value of the Enroute Field Once It Has Been Set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Enter_Follow_Up_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>Follow_Up_Needed__c == True &amp;&amp;  Isblank(Issues_to_Follow_Up_On__c)&amp;&amp;  RecordTypeId =&apos;0121I000000BZFdQAO&apos;</errorConditionFormula>
        <errorDisplayField>Issues_to_Follow_Up_On__c</errorDisplayField>
        <errorMessage>Please Notate What Issues To Follow Up On</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Change_Type_of_Software_Needed_Once</fullName>
        <active>true</active>
        <description>Only Change Type of Software Needed Once</description>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZtV&apos; )&amp;&amp; 
 (Text(PRIORVALUE(Type_of_Software_Needed_For_Appointment__c))!= Text(Type_of_Software_Needed_For_Appointment__c))&amp;&amp;Not(Isblank(Text(PRIORVALUE(Type_of_Software_Needed_For_Appointment__c))))</errorConditionFormula>
        <errorDisplayField>Type_of_Software_Needed_For_Appointment__c</errorDisplayField>
        <errorMessage>A User Can Only Change Type of Software Needed Once</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submission_Value_Cannot_Change</fullName>
        <active>true</active>
        <description>You Cannot Change the Value of the Submitted Field Once It Has Been Set.</description>
        <errorConditionFormula>(RecordTypeId=&apos;0121I000000BZFd&apos; || RecordTypeId=&apos;0121I000000BZtW&apos; || RecordTypeId=&apos;0121I000000BZtV&apos; || RecordTypeId=&apos;0121I000000BZtU&apos; ||
RecordTypeId=&apos;0121I000000BZtT&apos; ||
RecordTypeId=&apos;0128C000000GqVh&apos; || RecordTypeId=&apos;0121I000000BaAf&apos;)&amp;&amp;
PriorValue(Submission_Date_time__c) != Submission_Date_time__c</errorConditionFormula>
        <errorDisplayField>Subject</errorDisplayField>
        <errorMessage>You Cannot Change the Value of the Submitted Field Once It Has Been Set.</errorMessage>
    </validationRules>
</CustomObject>